navbar and footer is soon responsive, need to fix the margin-left for "home, etc." buttons as they are not responsive yet

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,6 @@
 
+/* Desktop */
+@media (min-width: 1281px){
 footer{
     width: 100%;
     height: 263px;
@@ -20,3 +22,139 @@ footer{
     font-size: 1.2rem;
     color: #fff;
 }
+}
+
+
+/* Laptops, desktops */
+@media (min-width: 1025px) and (max-width: 1280px) {
+    footer{
+        width: 100%;
+        height: 263px;
+        background-color: #1A4723;
+        text-align: center;
+        display: block;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    
+    .footer-logo{
+        width: 130px;
+        height: auto;
+        margin-top: 30px;
+    }
+    
+    .footer-text{
+        font-size: 1.2rem;
+        color: #fff;
+    }
+}
+
+
+/* Tables, Ipads (portrait) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  
+    footer{
+        width: 100%;
+        height: 263px;
+        background-color: #1A4723;
+        text-align: center;
+        display: block;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    
+    .footer-logo{
+        width: 130px;
+        height: auto;
+        margin-top: 30px;
+    }
+    
+    .footer-text{
+        font-size: 1.2rem;
+        color: #fff;
+    }
+
+  }
+
+/* Mobile */
+  @media (min-width: 768px) and (max-width: 1024px)  {
+  
+    footer{
+        width: 100%;
+        height: 263px;
+        background-color: #1A4723;
+        text-align: center;
+        display: block;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    
+    .footer-logo{
+        width: 130px;
+        height: auto;
+        margin-top: 30px;
+    }
+    
+    .footer-text{
+        font-size: 1.2rem;
+        color: #fff;
+    }
+  }
+
+
+  @media (min-width: 481px) and (max-width: 767px) {
+
+    footer{
+        width: 100%;
+        height: 263px;
+        background-color: #1A4723;
+        text-align: center;
+        display: block;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    
+    .footer-logo{
+        width: 130px;
+        height: auto;
+        margin-top: 30px;
+    }
+    
+    .footer-text{
+        font-size: 1.2rem;
+        color: #fff;
+    }
+    
+  }
+
+
+  /* smartphones */
+  @media (min-width: 320px) and (max-width: 480px) {
+  
+    footer{
+        width: 100%;
+        height: 263px;
+        background-color: #1A4723;
+        text-align: center;
+        display: block;
+        position: absolute;
+        bottom: 0;
+    
+    }
+    
+    .footer-logo{
+        width: 130px;
+        height: auto;
+        margin-top: 30px;
+    }
+    
+    .footer-text{
+        font-size: 1.2rem;
+        color: #fff;
+    }
+    
+  }
